add avatar to channel
